tests/typechecking/valid/if_then_else/if_print_int.ml
let x = 3 in
  let y = 7 in
    if x >= y then
      print_int(x)
    else
      print_int(y)