tests/typechecking/invalid/arithmetic_operations/int_float_add.ml
let x = 2 in
  let y = 3.0 in
    x + y